# cpuminer-multi

./: Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  bitops.h  configure.ac  cpu-miner.c  gpu.h  miner.h
